@@ -78,10 +78,10 @@ public class PublisherQosPolicy implements QosPolicy<PublisherQos> {
             logger.warn("PARTITION QosPolicy is reserved for internal use!");
         }
 
-        // ENTITY_FACTORY QosPolicy (reserved)
+        // ENTITY_FACTORY QosPolicy
         property = helper.find("ENTITY_FACTORY.autoenable_created_entities");
         if (property.exists()) {
-            logger.warn("ENTITY_FACTORY QosPolicy is reserved for internal use!");
+            qos.entity_factory.autoenable_created_entities = property.asBoolean();
         }
     }
 
